# compliance-collector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: backend-ci.yml  ci.yml  portal-ci.yml
azure-pipelines/: README.md  ci.yml  deploy.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  graph_auth.py  jobs.py  main.py  models.py  storage.py
backend/app/routers/: assessments.py  auth_router.py  consent.py  health.py  reports.py
backend/tests/: conftest.py  test_assessments.py  test_auth.py  test_consent.py  test_health.py
docs/: backend-setup.md  demo-script.md  setup.md  v0.5-merge.md  v0.6-deploy.md  v0.6-merge.md
infra/: main.bicep  main.parameters.json
portal/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
portal/src/app/: globals.css  layout.tsx  page.tsx
portal/src/app/api/backend/[...path]/: route.ts
portal/src/app/api/config/: route.ts
portal/src/app/assessments/: page.tsx
portal/src/app/assessments/[id]/: page.tsx
portal/src/app/assessments/new/: page.tsx
portal/src/app/auth/callback/: page.tsx
portal/src/app/consent/: page.tsx
portal/src/app/consent/callback/: page.tsx
portal/src/components/: AuthProvider.tsx  NavBar.tsx  StatusPill.tsx
portal/src/lib/: api.ts  msalConfig.ts  types.ts
portal/src/lib/__tests__/: types.test.ts
src/compliance_collector/: __init__.py  __main__.py  auth.py  cli.py  config.py  evaluator.py  manifest.py  report.py
src/compliance_collector/collectors/: __init__.py  base.py  conditional_access.py  mfa_registration.py  privileged_roles.py
src/compliance_collector/controls/: cis-m365.yaml  soc2.yaml
src/compliance_collector/templates/: report.html.j2
tests/: test_evaluator.py  test_manifest.py  test_report.py
